[package]
name = "mwc-supply-verifier"
version = "0.1.0"
edition = "2021"
description = "Standalone MWC supply verification tool - cryptographically verifies no coins were created out of thin air"
license = "MIT"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
clap = { version = "4", features = ["derive"] }

# MWC core libraries - pinned to match node version
mwc_core = "=5.3.9"
mwc_util = "=5.3.9"
mwc_chain = "=5.3.9"
